--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   ],
   "author": "Josh White",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
